--- a/index.html
+++ b/index.html
@@ -422,7 +422,9 @@
   </div>
 </div>
 
-<!-----------------------------Quotes------------------------>
+
+<!-------------------Quotes----------------------->
+<section>
 <div id="quotes">
   <div class="container">
     <div class="row">
@@ -450,7 +452,7 @@
       <div class="w-100"></div>
 
       <div class="col-sm">
-        <img class="q-img-2" src="img/BishwaSir.jpg" align= "right">
+        <img class="q-img-2" src="img/BS4.jpeg" align= "right">
         <p class="q-text-2">
           "Duis aute irure dolor in reprehenderit in voluptate
            velit esse cillum dolore eu fugiat nulla pariatur.
@@ -467,6 +469,7 @@
     </div>
   </div>
 </div>
+</section>
 
 
 
